# blueside-code

./: .gitignore  README.md
2025-08-02_attention/: multi_head_attn.py
attention/: README.md  masked-self-attn.py  pyproject.toml  self-attn.py  self_attn.py
makemore/: makemore1.ipynb  makemore2.ipynb  pyproject.toml
pytorch_basics/: basics_00_tensors.ipynb  basics_01_sets_and_loaders  basics_01_sets_and_loaders.ipynb  basics_02_transforms.ipynb  basics_03_buildmodel.ipynb  basics_04_autograd.ipynb  basics_05_optimization.ipynb  basics_tensors.ipynb
pytorch_dl/: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb  03_pytorch_computer_vision.ipynb  pyproject.toml
