[project]
name = "pytorch-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "mlxtend>=0.23.4",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
